content/boundary/v0.6.x/content/docs/configuration/events/common.mdx
---
layout: docs
page_title: Controller/Worker - Events - Common Sink Parameters
description: |-
  The common sink parameters for all sink types.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2021-01-01T00:00:00.000Z
last_modified: 2021-01-01T00:00:00.000Z
# END AUTO GENERATED METADATA
---

# Common Sink Parameters

These parameters are shared across all sink types:

- `name` - Specify a name for the sink.

- `description` - Specify a description for the sink.

- `event_types` - Specifies a list of event types that will be sent to the sink.
  Can be `*`, `error`, `system`, `observation` or `audit`.  
  
  Note: `audit` events are a WIP and will only be emitted if they are both enabled and the env var `BOUNDARY_DEVELOPER_ENABLE_EVENTS` equals true. We anticipate many changes for audit events before they are generally available including what data is included and different options for redacting/encrypting that data.

- `event_source_url` - Specifies an optional event source URL for the sink.  If
  not specified a default source will be composed of the
  https://hashicorp.com/boundary.io/ServerName/Path/FileName.

- `allow_filters` - Specifies a set predicates for including an event in the
  sink. If any filter matches, the event will be included. For more information,
  on using filters see: [event filtering](/docs/concepts/filtering/events)
  
- `deny-filters` - Specifies a set predicates for excluding an event in the
  sink. If any filter matches, the event will be excluded. For more information
  on using filters see: [event filtering](/docs/concepts/filtering/events)

- `format` - Specifies the format for the sink. Can be `cloudevents-json`,
  `cloudevents-text`, `hclog-json`, or `hclog-text`.

- `type` - Specifies the type of sink.  Can be `stderr` or `file`.
